DnD bugfixes: z-index of itinerary container, and dragged history moved to bottom of list

--- a/countries-fe/src/components/itinerary/itinerary.scss
+++ b/countries-fe/src/components/itinerary/itinerary.scss
@@ -1,7 +1,7 @@
 @import '../../global_styles/';
 
 .itinerary {
-    z-index: 3;
+    z-index: 1;
     min-height: fit-content;
     overflow-y: scroll;
     margin-top: 25vh;
